Some renaming of Jaxpr to ClosedJaxpr in documentation

--- a/documentation/source/general/tutorial/Jasp.ipynb
+++ b/documentation/source/general/tutorial/Jasp.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "### What is Jasp?\n",
     "\n",
-    "Jasp is a module that provides Jax primitives for Qrisp syntax and therefore makes Qrisp Jax-traceable. How does this work in practice? The central class here is the [Jaspr](../../reference/Jasp/Jaspr.rst), which is a subtype of the Jaxpr. Similarly to Jaxprs, Jasprs can be created using the ``make_jaspr`` function."
+    "Jasp is a module that provides Jax primitives for Qrisp syntax and therefore makes Qrisp Jax-traceable. How does this work in practice? The central class here is the [Jaspr](../../reference/Jasp/Jaspr.rst), which is a subtype of the ClosedJaxpr. Similarly to ClosedJaxprs, Jasprs can be created using the ``make_jaspr`` function."
    ]
   },
   {
