Fixed link to image in H2 tutorial; Rescaled image in Jasp QAOA tutorial

--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -46,7 +46,7 @@
     "participated in a course for atomic physics before, you might have seen\n",
     "pictures like this:\n",
     "\n",
-    "<img src=\"https://www.qrisp.eu/_images/hydrogen_with_axes.png\" class=\"align-center\" width=\"400\" alt=\"image\" />\n",
+    "<img src=\"hydrogen_with_axes.png\" class=\"align-center\" width=\"400\" alt=\"Hydrogen atom\" />\n",
     "\n",
     "This plot represents the real part of the amplitude of one of the basis\n",
     "vectors (the one with $n = 4, k = 3, l = 1$ to be precise).\n",
