--- a/documentation/source/general/tutorial/JaspQAOAtutorial.ipynb
+++ b/documentation/source/general/tutorial/JaspQAOAtutorial.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Given a Graph $G = (V,E)$ find a bipartition $S$, $V\\setminus S$ of the set of vertices $V$ such that the number of edges between $S$ and $V\\setminus S$ is maximal.\n",
     "\n",
-    "![MaxCut Example](../../_static/maxcut_tutorial.png)\n",
+    "<img src=\"../../_static/maxcut_tutorial.png\" class=\"align-center\" width=\"400\" alt=\"MaxCut example\" />\n",
     "\n",
     "For a graph $G$ with $n$ nodes, such a bipartition can be encoded with a [QuantumVariable](../../reference/Core/QuantumVariable.rst) with $n$ qubits: \n",
     "we measure the $i$-th qubit in 0 if the node $i$ is in the set $S$, and 1 if the node $i$ is in the set $V\\setminus S$.\n",
