--- a/documentation/source/general/QC_basics/Notebooks/1stqrispprogramming.ipynb
+++ b/documentation/source/general/QC_basics/Notebooks/1stqrispprogramming.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Repetition: the QuantumVariable\n",
     "\n",
-    "In baby_s_first_quantum_computing(TODO:add link), we first learned about the QuantumVariable.  Let's recap what we already know: It is the main building block of Qrisp algorithms, initialized with the number of qubits and inherits to other classes. We initialize a QuantumVariable with: "
+    "In Baby's First quantum Computing, we first learned about the QuantumVariable.  Let's recap what we already know: It is the main building block of Qrisp algorithms, initialized with the number of qubits and inherits to other classes. We initialize a QuantumVariable with: "
    ]
   },
   {
