--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -152,7 +152,7 @@
    "metadata": {},
    "source": [
     "To apply the Pauli exclusion principle but also other anti-commutation\n",
-    "laws for simplifaction, you can call the\n",
+    "laws for simplification, you can call the\n",
     "[.reduce](../../reference/Operators/generated/qrisp.operators.fermionic.FermionicOperator.reduce.rst) method."
    ]
   },
