Fix number of iterations for grover example in documentation

--- a/documentation/source/general/tutorial/tutorial.ipynb
+++ b/documentation/source/general/tutorial/tutorial.ipynb
@@ -529,12 +529,13 @@
     }
    ],
    "source": [
+    "from math import pi\n",
     "from qrisp.grover import diffuser\n",
     "\n",
     "qf = QuantumFloat(3, -1, signed=True)\n",
     "\n",
     "n = qf.size\n",
-    "iterations = int((2**n / 2) ** 0.5)\n",
+    "iterations = int(0.25 * pi * (2**n / 2) ** 0.5)\n",
     "\n",
     "h(qf)\n",
     "\n",
