add picture credit

--- a/documentation/source/general/QC_basics/Notebooks/QPEandQFT.ipynb
+++ b/documentation/source/general/QC_basics/Notebooks/QPEandQFT.ipynb
@@ -16,6 +16,8 @@
     "\n",
     "![alt_text](./Fourier_transform.png)\n",
     "\n",
+    "Source: Wikipedia (https://commons.wikimedia.org/wiki/File:FFT-Time-Frequency-View.png)",
+    "\n",
     "Here, you can see the different domains represented as axes and the switch between them would be done with the Fourier transformation.  \n",
     "From a mathematical standpoint,  mostly the formulation for continuous functions is used: \n",
     "$$ f(x) = \\frac{1}{\\sqrt{2 \\pi}} \\int_{ - \\infty}^\\infty F(k) e^{ikx} dk$$\n",
