added DQI tutorial and algorithm TBD DQI docu + small changes to Dickestates tut and function

--- a/documentation/source/general/tutorial/DickeStatestutorial.ipynb
+++ b/documentation/source/general/tutorial/DickeStatestutorial.ipynb
@@ -456,9 +456,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d5c2102",
+   "metadata": {},
+   "source": [
+    "Further caveat, this function also works for ``QuantumArrays``, whose ``qType`` has only one qubit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f134823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qrisp import QuantumArray\n",
+    "qtype = QuantumFloat(1)\n",
+    "qv = QuantumArray(qtype, (7,)) \n",
+    "\n",
+    "x(qv[4:])\n",
+    "dicke_state(qv, 3 )\n",
+    "print(qv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e66681a0",
    "metadata": {},
    "source": [
+    "\n",
     "### Divide-and-Conquer approach\n",
     "\n",
     "For the final algorithm in this tutorial let us investigate the [Divide-and-Conquer approach from Bärtschi et al.](https://arxiv.org/abs/2112.12435).\n",
@@ -558,12 +583,14 @@
    "metadata": {},
    "source": [
     "Let's look at one final example on how to use this function with and without *Jaspification*.\n",
-    "We initiate a QuantumVariable with 7 qubits from this create the Dicke state with Hamming weight 3 with the [@terminal_sampling](../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator."
+    "We initiate a QuantumVariable with 7 qubits from this create the Dicke state with Hamming weight 3 with the [@terminal_sampling](../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator.\n",
+    "\n",
+    "**Attention!** When using this function, the ``QuantumVariable`` you operate on should be in the all-$\\ket{0}$ state, as opposed to a state with correct Hamming weight as with the normal ``dicke_state`` function!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8279be85",
    "metadata": {},
    "outputs": [
@@ -580,6 +607,7 @@
     "def main():\n",
     "    n = 7\n",
     "    qv_1 = QuantumVariable(n)\n",
+    "    \n",
     "    dicke_divide_and_conquer(qv_1, 3)\n",
     "\n",
     "    return qv_1\n",
