--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -42,7 +42,7 @@
     "# Define Heisenberg Hamiltonian with spectrum in [-1,1]\n",
     "L = 10\n",
     "G = generate_1D_chain_graph(L)\n",
-    "H = (1/27)*sum((X(i)*X(j) + Y(i)*Y(j) + Z(i)*Z(j)) for i,j in G.edges())\n",
+    "H = (1/(3*L-3))*sum((X(i)*X(j) + Y(i)*Y(j) + Z(i)*Z(j)) for i,j in G.edges())\n",
     "M = nx.maximal_matching(G)\n",
     "U0 = create_heisenberg_init_function(M)\n",
     "\n",
