--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Filtered state prepartion with GQSP\n",
     "\n",
-    "Ground state preparation is a fundamental task in quantum computations with applications in chemisty, material sciences and physics. \n",
+    "Ground state preparation is a fundamental task in quantum computation with applications in chemistry, material sciences and physics. \n",
     "In this tutorial, we explore how to use [Generalized Quantum Signal Processing](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368) for this task:\n",
     "starting form an inital state, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state."
    ]
@@ -56,7 +56,7 @@
     "\n",
     "# Calculate the energy\n",
     "E = calculate_energy(H, psi_prep)\n",
-    "print(E)\n"
+    "print(E)"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "id": "d5b0a5af",
    "metadata": {},
    "source": [
-    "Indeed, we achieve a significanlty lower energy -- hence, a higher overlap with the ground state -- for the transformed state after QSP. "
+    "Indeed, we achieve a significantly lower energy -- hence, a higher overlap with the ground state -- for the transformed state after QSP. "
    ]
   }
  ],
