Fixed typos; improved GQSP tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -5,11 +5,11 @@
    "id": "34b89908",
    "metadata": {},
    "source": [
-    "# Filtered state prepartion with GQSP\n",
+    "# Filtered state preparation with GQSP\n",
     "\n",
     "Ground state preparation is a fundamental task in quantum computation with applications in chemistry, material sciences and physics. \n",
     "In this tutorial, we explore how to use [Generalized Quantum Signal Processing](https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.5.020368) for this task:\n",
-    "starting form an inital state, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state."
+    "starting form an initial state, we apply a Gaussian filter to enhance the overlap of the prepared state with the ground state."
    ]
   },
   {
@@ -26,11 +26,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import networkx as nx\n",
-    "\n",
-    "\n",
-    "def calculate_energy(H, state_prep, state_args=()):\n",
-    "    E = H.expectation_value(state_prep, diagonalisation_method=\"commuting\", precision=0.001)(*state_args)\n",
-    "    return E\n",
     "\n",
     "\n",
     "def generate_1D_chain_graph(L):\n",
@@ -55,7 +50,7 @@
     "\n",
     "\n",
     "# Calculate the energy\n",
-    "E = calculate_energy(H, psi_prep)\n",
+    "E = H.expectation_value(psi_prep, precision=0.001)()\n",
     "print(E)"
    ]
   },
@@ -86,7 +81,7 @@
     "# Initial state\n",
     "psi0 = psi_prep().qs.statevector_array()\n",
     "fidelities = np.array([np.abs(eigvecs_sorted[k].conj() @ psi0)**2  for k in range(len(eigvals))])\n",
-    "fidelities_significant = np.where(fidelities>0.01, fidelities,0)\n",
+    "fidelities_significant = np.where(fidelities>0.01, fidelities, 0)\n",
     "indices = np.argwhere(fidelities_significant)\n",
     "indices\n",
     "\n",
@@ -99,11 +94,24 @@
    "id": "ec33e572",
    "metadata": {},
    "source": [
-    "We observe that the inital state already has fidelity $F_0 \\approx 0.68$ with the ground state $\\ket{\\lambda_0}$ with energy $\\lambda_0 \\approx -0.63$. \n",
+    "We observe that the initial state already has fidelity $F_0 \\approx 0.68$ with the ground state $\\ket{\\lambda_0}$ with energy $\\lambda_0 \\approx -0.63$. \n",
     "Moreover, the inital state has a significant overlap with only 5 heigher energy eigenstates.\n",
     "\n",
-    "Starting at our inital state $\\ket{\\psi_0}$, we aim to prepare a state with an even higher overlap with the ground state $\\ket{\\psi_0}$. \n",
-    "Therefore, we aim to apply a Gaussian filter centered at $\\lambda_0$. This filter is approximated by Chebyshev polynomials of first kind."
+    "Starting at our initial state $\\ket{\\psi_0}$, we aim to prepare a state with an even higher overlap with the ground state $\\ket{\\psi_0}$. \n",
+    "Therefore, we aim to apply a Gaussian filter centered at $\\lambda_0$ which suppresses heigher energy components: indeed for \n",
+    "\n",
+    "$$ H = \\sum_i\\lambda_i\\ket{\\lambda_i}\\bra{\\lambda_i}\\quad \\text{and}\\quad \\ket{\\psi_0} = \\sum_i\\alpha_i\\ket{\\lambda_i} $$\n",
+    "\n",
+    "the state $\\ket{\\psi}$ after applying the filter $f$ is\n",
+    "\n",
+    "$$ \\ket{\\psi} = \\frac{f(H)\\ket{\\psi_0}}{\\|f(H)\\ket{\\psi_0}\\|} $$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$ f(H)\\ket{\\psi_0} = \\left(\\sum_i f(\\lambda_i)\\ket{\\lambda_i}\\bra{\\lambda_i}\\right) \\sum_j\\alpha_j\\ket{\\lambda_j} = \\sum_i f(\\lambda_i)\\alpha_i\\ket{\\lambda_i} $$\n",
+    "\n",
+    "Thus, the magnitude of the amplitude of $\\ket{\\lambda_i}$ for $i>0$ is suppressed relative to the amplitude of $\\ket{\\lambda_0}$ in the state $\\ket{\\psi}$.\n",
+    "This filter is approximated by Chebyshev polynomials of first kind."
    ]
   },
   {
@@ -193,7 +201,7 @@
    "outputs": [],
    "source": [
     "@RUS\n",
-    "def inner():\n",
+    "def filtered_psi_prep():\n",
     "\n",
     "    # Pauli block-encoding satisfying U^2=I\n",
     "    U, state_prep, n = H.pauli_block_encoding()\n",
@@ -213,13 +221,29 @@
     "        qbl = GQSP([case, operand], RU, p, k=0)\n",
     "\n",
     "    success_bool = (measure(qbl) == 0) & (measure(case) == 0)\n",
-    "    return success_bool, operand\n",
-    "\n",
-    "\n",
+    "    return success_bool, operand"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f2e7b43",
+   "metadata": {},
+   "source": [
+    "Recall that GQSP is probabilistic, and the desired transformation is successfully applied if the auxiliary QuantumBool is measured in state $\\ket{0}$. \n",
+    "Hence, the filtered state preparation is embedded within a [Repeat-Until-Success](../../reference/Jasp/Control%20Flow/RUS.rst) protocol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc3b864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@jaspify(terminal_sampling=True)\n",
     "def main(): \n",
     "\n",
-    "    E = calculate_energy(H, inner)\n",
+    "    E = H.expectation_value(filtered_psi_prep, precision=0.001)()\n",
     "    return E\n",
     "\n",
     "# print(main())\n",
