some more cosmetic fixes

--- a/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
@@ -458,7 +458,7 @@
     "\n",
     "$$V_f = U_f \\otimes 1_{m \\times m} = \\bigoplus_{i = 0}^{m-1} U_f$$\n",
     "\n",
-    "To begin with the implementation, we first use the [as_hamiltonian](../../../reference/Utilities/generated/qrisp.as_hamiltonian.rst) decorator to implement the hamiltonian evolution:\n",
+    "To begin with the implementation, we first use the [as_hamiltonian](../../../reference/Utilities/as_hamiltonian.rst) decorator to implement the hamiltonian evolution:\n",
     "\n",
     "$$\\text{exp}\\left( i \\sum_{i = 0}^{m-1} \\beta_i \\ket{x_i}\\bra{x_i} \\right)$$\n",
     "\n",
