deprecated the garbage_collection keyword of make_jaspr

--- a/documentation/source/general/tutorial/HHL.ipynb
+++ b/documentation/source/general/tutorial/HHL.ipynb
@@ -194,6 +194,15 @@
     "\n",
     "    cancellation_bool = (measure(case_indicator) == 0) & (measure(qbl) == 0)\n",
     "\n",
+    "    # Clean up case-indicator and qbl\n",
+    "    # When using the RUS decorator, all local variables of the\n",
+    "    # trial function need to be deallocated in order to avoid\n",
+    "    # quantum memory leaks.\n",
+    "    qrisp.reset(case_indicator)\n",
+    "    qrisp.reset(qbl)\n",
+    "    qbl.delete()\n",
+    "    case_indicator.delete()\n",
+    "\n",
     "    # The first return value is a boolean.\n",
     "    # Additional return values are QuantumVariables.\n",
     "    return cancellation_bool, qf, qpe_res, inv_res"
