Separated outline into markdown and python blocks

--- a/documentation/source/general/tutorial/BE_tutorial.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial.ipynb
@@ -22,22 +22,66 @@
     "### how to construct a BE object (quantum numpy)\n",
     "\n",
     "#### ``from_operator``\n",
-    "Explain that it block‑encodes the Hermitian part of the operator and internally uses a Pauli decomposition.​\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "Explain that it block‑encodes the Hermitian part of the operator and internally uses a Pauli decomposition.​"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50358088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f650324",
+   "metadata": {},
+   "source": [
     "#### ``.from_array``\n",
-    "Square matrix, size a power of two, supports `ndarray`, `csrarray`, `csrmatrix`.​\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "Square matrix, size a power of two, supports `ndarray`, `csrarray`, `csrmatrix`.​"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d77f12b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c7ad43",
+   "metadata": {},
+   "source": [
     "#### ``.from_LCU``\n",
     "Introduce `BlockEncoding.from_lcu(coeffs, unitaries)` and the PREP–SEL–PREP† construction.​\n",
     "\n",
-    "Explain padding of coefficients, normalization α=∑i∣αi∣α=∑i∣αi∣, sign handling via additional phase flips, and how `qswitch` is used inside. ​\n",
+    "Explain padding of coefficients, normalization α=∑i∣αi∣α=∑i∣αi∣, sign handling via additional phase flips, and how `qswitch` is used inside. ​"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec036486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE\n",
     "\n",
-    "EXAMPLE: Laplacian example already in the doc (1D discrete Laplace), show how to write `unitaries = [I, V, V_dag]` and `coeffs`, then `BE = BlockEncoding.from_lcu(coeffs, unitaries)`.​\n",
-    "\n",
+    "### EXAMPLE: Laplacian example already in the doc (1D discrete Laplace), show how to write `unitaries = [I, V, V_dag]` and `coeffs`, then `BE = BlockEncoding.from_lcu(coeffs, unitaries)`.​\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7399686c",
+   "metadata": {},
+   "source": [
     "#### Algebra of BlockEncodings: +, -, *, @, .kron, .neg\n",
     "\n",
     "Goal: Show how to combine block encodings using operator overloading.\n",
@@ -46,64 +90,224 @@
     "\n",
     "##### adition ``__add__``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7a7b4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "254abd7d",
+   "metadata": {},
+   "source": [
     "##### subtraction ``__sub__``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a28a1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb6b8cef",
+   "metadata": {},
+   "source": [
     "##### scalar multiplication ``__mul__``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6975e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1c83a7d",
+   "metadata": {},
+   "source": [
     "##### matrix multiplication ``__matmul__``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26393dc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1c05d58",
+   "metadata": {},
+   "source": [
     "##### kronecker product ``__.kron__``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "149a5877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d867d760",
+   "metadata": {},
+   "source": [
     "##### negation ``__neg__``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e992e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f76a43e",
+   "metadata": {},
+   "source": [
     "#### Chebyshev polynomial using ``.chebyshev``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec0ec62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7497348",
+   "metadata": {},
+   "source": [
     "#### Inverse using ``.inv``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc0952c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75f1bb84",
+   "metadata": {},
+   "source": [
     "#### Polynomial transformations using ``.poly``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "036ce0b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a3c5d16",
+   "metadata": {},
+   "source": [
     "#### Hamiltnian simulation using ``.sim``\n",
     "\n",
-    "EXPLAIN\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f645d34b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b286314c",
+   "metadata": {},
+   "source": [
+    "### Resource estimation using ``.resources``\n",
     "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07199f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1c9d3e5",
+   "metadata": {},
+   "source": [
     "### Applying a BlockEncoding (quantum LAPACK)\n",
     "\n",
     "Goal: Demonstrate how to actually use a `BlockEncoding` to act on states.\n",
@@ -111,20 +315,83 @@
     "#### ``.apply``\n",
     "EXPLAIN\n",
     "\n",
-    "SHOW NISQ-FRIENDLY POST-SELECTION APPROACH\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
+    "EXPLAIN NISQ-FRIENDLY POST-SELECTION APPROACH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a803f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3522e058",
+   "metadata": {},
+   "source": [
     "#### ``.apply_rus``\n",
     "\n",
-    "EXPLAIN\n",
-    "\n",
-    "EXAMPLE\n",
-    "\n",
-    "### Further examples\n",
-    "\n",
-    "### Wrap-up\n",
-    "\n"
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26d71afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b0eed0e",
+   "metadata": {},
+   "source": [
+    "### Further examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d99fc70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01450515",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c158548c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d57584",
+   "metadata": {},
+   "source": [
+    "### Wrap-up"
    ]
   }
  ],
