retitled tutorials for better sidebar

--- a/documentation/source/general/tutorial/BE_tutorial/BE_arithmetic.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_arithmetic.ipynb
@@ -5,7 +5,7 @@
    "id": "5bfcc564",
    "metadata": {},
    "source": [
-    "#### Algebra of BlockEncodings: +, -, *, @, .kron, .neg\n",
+    "#### BlockEncoding arithmetics\n",
     "\n",
     "Goal: Show how to combine block encodings using operator overloading.\n",
     "\n",
