--- a/documentation/source/general/tutorial/BE_tutorial/BE_theory.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_theory.ipynb
@@ -5,11 +5,7 @@
    "id": "34b89908",
    "metadata": {},
    "source": [
-    "# Block encodings as programming abstraction and Quantum Linear Algebra using the BlockEncoding class\n",
-    "\n",
-    "Motivation, goal, ...\n",
-    "\n",
-    "## Basic theoretical concepts.\n",
+    "## LCU, block encoding, (G)QSP\n",
     "\n",
     "### Block encoding 101\n",
     "\n",
