Added some of the images for the tutorial. Included .qubitization in outline

--- a/documentation/source/general/tutorial/BE_tutorial/BE_construct.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_construct.ipynb
@@ -65,6 +65,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19a05d46",
+   "metadata": {},
+   "source": [
+    "#### $n$-step Qubitization\n",
+    "\n",
+    "EXPLAIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "738ad050",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f76a43e",
    "metadata": {},
    "source": [
