Minor improvements for filtering tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "$$ H = \\sum_{i=0}^{L-1}(X_iX_{i+1} + Y_iY_{i+1} + Z_iZ_{i+1}) $$\n",
     "\n",
-    "As inital system state we use a tensor product of Singlet states\n",
+    "As initial system state we use a tensor product of Singlet states\n",
     "\n",
     "$$ \\ket{\\text{Singlet}} = 2^{-L/4}(\\ket{10}-\\ket{01})^{\\otimes L/2} $$\n",
     "\n",
@@ -54,14 +54,14 @@
     "\n",
     "\n",
     "# Define initial state preparation function \n",
-    "# preparing a tensor product of singlet state.\n",
+    "# preparing a tensor product of Singlet states.\n",
     "def psi_prep():\n",
     "    operand = QuantumVariable(H.find_minimal_qubit_amount())\n",
     "    U0(operand)\n",
     "    return operand\n",
     "\n",
     "\n",
-    "# Calculate the energy.\n",
+    "# Calculate the energy for the initial state.\n",
     "E = H.expectation_value(psi_prep, precision=0.001)()\n",
     "print(E)"
    ]
@@ -124,7 +124,7 @@
     "$$ f(H)\\ket{\\psi_0} = \\left(\\sum_i f(\\lambda_i)\\ket{\\lambda_i}\\bra{\\lambda_i}\\right) \\sum_j\\alpha_j\\ket{\\lambda_j} = \\sum_i f(\\lambda_i)\\alpha_i\\ket{\\lambda_i} $$\n",
     "\n",
     "Thus, the magnitude of the amplitude of $\\ket{\\lambda_i}$ for $i>0$ is suppressed relative to the amplitude of $\\ket{\\lambda_0}$ in the state $\\ket{\\psi}$.\n",
-    "This filter is approximated by Chebyshev polynomials of first kind."
+    "This filter is approximated by Chebyshev polynomials of the first kind."
    ]
   },
   {
@@ -137,7 +137,7 @@
     "from numpy.polynomial import Chebyshev\n",
     "from numpy.polynomial.chebyshev import chebval\n",
     "\n",
-    "# Define the Gaussian centered at minimal eigenvalue lambda_0 on [-1, 1]\n",
+    "# Define the Gaussian centered at minimal eigenvalue lambda_0 on [-1, 1].\n",
     "mu = eigvals_sorted[0]\n",
     "sigma = 0.05\n",
     "\n",
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "# Returns a list of unitaries, i.e., functions performing in-place operations \n",
-    "# on the operand quantum variable and a list of coefficients.\n",
+    "# on the operand quantum variable, and a list of coefficients.\n",
     "unitaries, coeffs = H.unitaries()\n",
     "n = len(unitaries).bit_length() # Number of qubits for auxiliary variable.\n",
     "\n",
@@ -314,14 +314,14 @@
     "\n",
     "\n",
     "    qbl = QuantumBool()\n",
-    "    # Pauli block-encoding requires one ancilla variable.\n",
+    "    # Pauli block-encoding requires one auxiliary variable.\n",
     "    case = QuantumFloat(n)\n",
     "    operand = psi_prep()\n",
     "\n",
     "    # Apply degree 10 Chebyshev approximation of Gaussian filter.\n",
     "    GQSP(qbl, case, operand, unitary=RU, p=cheb_coeffs[:11], k=0)\n",
     "\n",
-    "    # Protocol successful if all ancilla variables are measured in state |0>.\n",
+    "    # Protocol is successful if all auxiliary variables are measured in state |0>.\n",
     "    success_bool = (measure(qbl) == 0) & (measure(case) == 0)\n",
     "    reset(qbl)\n",
     "    reset(case)\n",
